<resources>
    <string name="app_name">RecipeIo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- start fragment strs-->
    <string name="start_cooking">Start Cooking</string>
    <string name="cook_better_food">Let’s join our community \n to cook better food!</string>
    <string name="bt_get_started">Get Started</string>
    <!-- login fragment strs-->
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_account">Please enter your account here</string>
    <string name="edEmail">Email</string>
    <string name="edPassword">Password</string>
    <string name="tvforgotpass">Forgot Password?</string>
    <string name="btLogin">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="havent_acc">Dont have any account?</string>
    <string name="go_to_signUp">Sign Up</string>
    <!-- SignUp fragment strs-->
    <string name="hello">Hello!</string>
    <string name="repeatpass">Repeat password</string>
    <string name="makeanaccount">Create an account</string>
    <string name="alreadyhaveacc">already have an account?</string>
    <string name="edusername">Username</string>
    <!-- forgot pass fragment strs-->
    <string name="pass_recovery_tv">Password recovery</string>
    <string name="pass_recovery_tv2">Enter your email to recover your password</string>
    <string name="signinbt">Sign In</string>

</resources>