<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvGoToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/btLogin"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/btSignUp"
            app:layout_constraintVertical_bias="0.155" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/alreadyhaveacc"
            android:textColor="@color/maintext"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSignUp"
            app:layout_constraintVertical_bias="0.157" />

        <android.widget.Button
            android:id="@+id/btSignUp"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button1"
            android:fontFamily="@font/bold"
            android:text="@string/go_to_signUp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPassRepeat"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edPassRepeat"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/img_2"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/repeatpass"
            android:inputType="text|textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="@color/secondarytext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPassSignUp"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edEmailSignUp"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/img_1"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/edEmail"
            android:inputType="text|textEmailAddress"
            android:paddingLeft="20dp"
            android:textColorHint="@color/secondarytext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edUsernameSignUp"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edUsernameSignUp"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/img_1"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/edusername"
            android:inputType="text|textEmailAddress"
            android:paddingLeft="20dp"
            android:textColorHint="@color/secondarytext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.04000002" />

        <EditText
            android:id="@+id/edPassSignUp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/img_2"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/edPassword"
            android:inputType="text|textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="@color/secondarytext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edEmailSignUp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/hello"
            android:textColor="@color/maintext"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <ProgressBar
            android:id="@+id/prBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.033">

            <ImageView
                android:id="@+id/imgava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>